force-app/main/default/objects/MTRNS__MapInstructions__mdt/MTRNS__MapInstructions__mdt.object-meta.xml
<CustomObject>
    <description>This object contains compiled mapping instructions for the MTRNS Mapping and Transformation package.</description>
    <label>Mapping Instructions</label>
    <pluralLabel>Mapping Instructions</pluralLabel>
</CustomObject>