force-app/main/default/objects/MTRNS__MapInstructions__mdt/fields/MTRNS__Context__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__Context__c</fullName>
    <description>The mapping instruction context (Request, Response, etc)</description>
    <label>Instruction Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>