force-app/main/default/objects/MTRNS__MapInstructions__mdt/fields/MTRNS__Differentiator__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__Differentiator__c</fullName>
    <description>The mapping instruction differentiator.</description>
    <label>Instruction Differentiator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>