force-app/main/default/objects/MTRNS__MapInstructions__mdt/fields/MTRNS__InstructionType__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__InstructionType__c</fullName>
    <description>The mapping instruction type (X2X-FAST, O2X-MAP, NCR, NCR-NFUSE, etc)</description>
    <label>Instruction Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>