force-app/main/default/objects/MTRNS__MapInstructions__mdt/fields/MTRNS__PackageName__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__PackageName__c</fullName>
    <description>Package name associated to this mapping instruction.</description>
    <label>Instruction Package Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>