force-app/main/default/objects/MTRNS__MapInstructions__mdt/fields/MTRNS__ProcessingOrder__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__ProcessingOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The processing order for this mapping instruction.</description>
    <label>Instruction Processing Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>