force-app/main/default/objects/MTRNS__MapInstructions__mdt/fields/MTRNS__SelectorKey__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__SelectorKey__c</fullName>
    <description>The mapping instruction selector key. This key is used to aggregate the mapping instructions.</description>
    <label>Instruction Selector Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>